/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

option go_package = "pb/gen";

package ukama.metrics.sanitizer.v1;


message DummyParameter{}

service SanitizerService {
    rpc Sanitize(SanitizeRequest) returns (SanitizeResponse);
}

message SanitizeRequest {
  bytes data = 1;
}

message SanitizeResponse {
}
